Añadiendo Progress Spinner

--- a/localizator/src/app/admin/company/company.component.html
+++ b/localizator/src/app/admin/company/company.component.html
@@ -1,3 +1,6 @@
+<div class="loading-shade" *ngIf="isLoadingResults">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+</div>
 <mat-card color="primary" class="animated fadeInUp">
     <mat-card-header color="primary">
         <mat-card-title>{{'company.list'|translate}}</mat-card-title>
