--- a/localizator/src/app/comun/place/place.component.html
+++ b/localizator/src/app/comun/place/place.component.html
@@ -1,3 +1,6 @@
+<div class="loading-shade" *ngIf="isLoadingResults">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+</div>
 <mat-card color="primary">
     <mat-card-header color="primary">
         <mat-card-title>Lista de Lugares</mat-card-title>
