--- a/localizator/src/app/mensaje/confirm.message.html
+++ b/localizator/src/app/mensaje/confirm.message.html
@@ -1,4 +1,4 @@
-<h6 mat-dialog-title>Confirmar Eliminar</h6>
+<h6 mat-dialog-title>Confirmar {{accion}}</h6>
 <hr style="position: relative;top: -10px;background-color: gray;">
 <div mat-dialog-content>
     <h1 style="font-size: 16px;" [innerHtml]="data.mensaje"></h1>
