--- a/localizator/src/app/admin/usuario/usuario.component.html
+++ b/localizator/src/app/admin/usuario/usuario.component.html
@@ -1,3 +1,6 @@
+<div class="loading-shade" *ngIf="isLoadingResults">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+</div>
 <mat-card color="primary">
     <mat-card-header color="primary">
         <mat-card-title>{{'usuario.list'|translate}}</mat-card-title>
@@ -14,7 +17,7 @@
         <span class="spacer-right"></span>
     </mat-card-header>
     <mat-card-content>
-        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" multiTemplateDataRows matSortDisableClear matSortDirection="desc">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDisableClear matSortDirection="asc">
             <ng-container matColumnDef="seleccionado">
                 <th mat-header-cell *matHeaderCellDef>
                     <mat-checkbox (change)="$event ? masterToggle() : null"
@@ -28,6 +31,11 @@
                                   [checked]="selection.isSelected(row)">
                     </mat-checkbox>
                 </td>
+            </ng-container>
+
+            <ng-container matColumnDef="index">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> No.</th>
+                <td mat-cell *matCellDef="let element;let i = index"> {{i+1}}</td>
             </ng-container>
 
             <ng-container matColumnDef="name">
