--- a/localizator/src/app/comun/travel/travel.component.html
+++ b/localizator/src/app/comun/travel/travel.component.html
@@ -1,3 +1,6 @@
+<div class="loading-shade" *ngIf="isLoadingResults">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+</div>
 <mat-card color="primary">
     <mat-card-header color="primary">
         <mat-card-title>{{'travel.list'|translate}}</mat-card-title>
