--- a/localizator/src/styles.css
+++ b/localizator/src/styles.css
@@ -165,3 +165,17 @@ snack-bar-container {
 mat-dialog-content {
     padding: 5px 24px;
 }
+
+.loading-shade {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 56px;
+    right: 0;
+    background: rgba(0, 0, 0, 0.15);
+    z-index: 100000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
