--- a/localizator/src/app/components/center/center.component.html
+++ b/localizator/src/app/components/center/center.component.html
@@ -7,11 +7,11 @@
     <div class="row">
         <div class="left-sidebar-1">
             <div class="wrapper">
-                <div class="content">
+                <div class="content" style="background: url('assets/images/logo/fondo.jpg') no-repeat;background-size: 100% 27%">
                     <div class="logo">
-                        <a href="#" class="text">
+                        <a href="#" class="text" style="font-size: 22px;position: relative;top: 40px;">
                             <i class="fa fa-adjust"></i>
-                            <span>GPS Tracking</span>
+                            <span>Bus GPS Tracking</span>
                         </a>
                     </div>
                     <div class="sidebar-heading">
