--- a/localizator/src/app/admin/usuario/usuario.component.css
+++ b/localizator/src/app/admin/usuario/usuario.component.css
@@ -10,8 +10,12 @@
     width: 50px;
 }
 
+.mat-column-index {
+    width: 50px;
+}
+
 .mat-column-acciones {
-    width: 140px;
+    width: 120px;
 }
 
 .mat-col-rol {
