--- a/localizator/src/app/comun/follow-travel/follow-travel.component.html
+++ b/localizator/src/app/comun/follow-travel/follow-travel.component.html
@@ -1,3 +1,89 @@
-<p>
-  follow-travel works!
-</p>
+<div class="loading-shade" *ngIf="isLoadingResults">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+</div>
+<mat-tab-group [selectedIndex]="indexTab" (selectedTabChange)="selectionChange($event)">
+    <mat-tab label="Lista de Viajes en Curso">
+        <mat-card color="primary">
+            <mat-card-header color="primary">
+                <mat-card-title>{{'travel.course'|translate}}</mat-card-title>
+                <mat-card-subtitle>{{'travel.coursemsg'|translate}}</mat-card-subtitle>
+                <span class="spacer"></span>
+                <mat-form-field class="pull-right" style="width: 200px;margin-right: 50px">
+                    <input matInput (keyup)="applyFilter($event.target.value)" style="padding-left: 5px" #input>
+                    <mat-label style="margin-left: 5px;">Buscar Viajes</mat-label>
+                    <mat-icon matPrefix style="position: relative;top: 8px;font-size: 25px">search</mat-icon>
+                </mat-form-field>
+                <span class="spacer-right"></span>
+            </mat-card-header>
+            <mat-card-content>
+                <table mat-table [dataSource]="dataSource" matSort matSortActive="travelDate" multiTemplateDataRows matSortDisableClear matSortDirection="desc">
+                    <ng-container matColumnDef="seleccionado">
+                        <th mat-header-cell *matHeaderCellDef>
+                            <mat-checkbox (change)="$event ? masterToggle() : null"
+                                          [checked]="selection.hasValue() && isAllSelected()"
+                                          [indeterminate]="selection.hasValue() && !isAllSelected()">
+                            </mat-checkbox>
+                        </th>
+                        <td mat-cell *matCellDef="let row">
+                            <mat-checkbox (click)="$event.stopPropagation()"
+                                          (change)="$event ? selection.toggle(row) : null"
+                                          [checked]="selection.isSelected(row)">
+                            </mat-checkbox>
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="active">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> Activo</th>
+                        <td mat-cell *matCellDef="let element"> {{element.active?'Si':'No'}}</td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="travelDate">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Viaje</th>
+                        <td mat-cell *matCellDef="let element">{{element.travelDate|date:'shortDate'}} {{element.travelTime|date:'shortTime'}}</td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="arriveDate">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Arrivo</th>
+                        <td mat-cell *matCellDef="let element">{{element.arriveDate|date:'shortDate'}} {{element.arriveTime|date:'shortTime'}}</td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="bus">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Bus</th>
+                        <td mat-cell *matCellDef="let element">{{element.bus|bus}}</td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="route">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Ruta</th>
+                        <td mat-cell *matCellDef="let element">{{element.route|route}}</td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="acciones" stickyEnd>
+                        <th mat-header-cell *matHeaderCellDef style="text-align: center;">Acciones</th>
+                        <td mat-cell *matCellDef="let element" align="center" class="acciones table-actions-theme">
+                            <button mat-mini-fab color="primary" (click)="addTab(element)" matTooltip="Hacer Seguimiento del Viaje: {{element.route|route}}">
+                                <mat-icon>pin_drop</mat-icon>
+                            </button>
+                        </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns; let i = index;"></tr>
+                </table>
+            </mat-card-content>
+            <mat-card-footer>
+                <mat-paginator [length]="resultsLength" [pageSize]="pageSize" [pageSizeOptions]="[10, 15, 20]" showFirstLastButtons></mat-paginator>
+            </mat-card-footer>
+        </mat-card>
+    </mat-tab>
+    <mat-tab *ngFor="let tab of tabs; let index = index" backgroundColor="primary">
+        <ng-template mat-tab-label backgroundColor="primary">
+            {{tab.route|route}}
+            <button type="button" mat-icon-button class="close-button" (click)="removeTab(index)">
+                <mat-icon style="font-size: 25px">close</mat-icon>
+            </button>
+        </ng-template>
+        <div style="padding: 20px 10px">
+            Contents for {{tab.route|route}} tab
+        </div>
+        <app-tab-map [travel]="tab"></app-tab-map>
+    </mat-tab>
+</mat-tab-group>
