--- a/localizator/src/app/comun/follow-travel/follow-travel.component.html
+++ b/localizator/src/app/comun/follow-travel/follow-travel.component.html
@@ -2,7 +2,7 @@
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
 </div>
 <mat-tab-group [selectedIndex]="indexTab" (selectedTabChange)="selectionChange($event)">
-    <mat-tab label="Lista de Viajes en Curso">
+    <mat-tab label="Viajes en Curso {{today|date:'shortDate'}}">
         <mat-card color="primary">
             <mat-card-header color="primary">
                 <mat-card-title>{{'travel.course'|translate}}</mat-card-title>
@@ -16,22 +16,7 @@
                 <span class="spacer-right"></span>
             </mat-card-header>
             <mat-card-content>
-                <table mat-table [dataSource]="dataSource" matSort matSortActive="travelDate" multiTemplateDataRows matSortDisableClear matSortDirection="desc">
-                    <ng-container matColumnDef="seleccionado">
-                        <th mat-header-cell *matHeaderCellDef>
-                            <mat-checkbox (change)="$event ? masterToggle() : null"
-                                          [checked]="selection.hasValue() && isAllSelected()"
-                                          [indeterminate]="selection.hasValue() && !isAllSelected()">
-                            </mat-checkbox>
-                        </th>
-                        <td mat-cell *matCellDef="let row">
-                            <mat-checkbox (click)="$event.stopPropagation()"
-                                          (change)="$event ? selection.toggle(row) : null"
-                                          [checked]="selection.isSelected(row)">
-                            </mat-checkbox>
-                        </td>
-                    </ng-container>
-
+                <table mat-table [dataSource]="dataSource" matSort matSortActive="travelDate" matSortDisableClear matSortDirection="desc">
                     <ng-container matColumnDef="active">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> Activo</th>
                         <td mat-cell *matCellDef="let element"> {{element.active?'Si':'No'}}</td>
@@ -77,13 +62,10 @@
     <mat-tab *ngFor="let tab of tabs; let index = index" backgroundColor="primary">
         <ng-template mat-tab-label backgroundColor="primary">
             {{tab.route|route}}
-            <button type="button" mat-icon-button class="close-button" (click)="removeTab(index)">
+            <button type="button" matRipple mat-icon-button class="close-button" (click)="removeTab(index)">
                 <mat-icon style="font-size: 25px">close</mat-icon>
             </button>
         </ng-template>
-        <div style="padding: 20px 10px">
-            Seguimiento del Viaje: {{tab.route|route}}
-        </div>
         <app-tab-map [travel]="tab"></app-tab-map>
     </mat-tab>
 </mat-tab-group>
