--- a/localizator/src/app/comun/travel/travel.component.html
+++ b/localizator/src/app/comun/travel/travel.component.html
@@ -62,6 +62,11 @@
                 <td mat-cell *matCellDef="let element">{{element.bus|bus}}</td>
             </ng-container>
 
+            <ng-container matColumnDef="company">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Empresa</th>
+                <td mat-cell *matCellDef="let element">{{element.bus.company|company}}</td>
+            </ng-container>
+
             <ng-container matColumnDef="route">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Ruta</th>
                 <td mat-cell *matCellDef="let element">{{element.route|route}}</td>
