--- a/localizator/src/app/comun/comun.component.html
+++ b/localizator/src/app/comun/comun.component.html
@@ -1,3 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
 <app-center></app-center>
+<div style="position: fixed;bottom: 0px;background-color: #1b5e20;height: 150px;width: 100%"></div>
