--- a/localizator/src/app/comun/place/place.component.html
+++ b/localizator/src/app/comun/place/place.component.html
@@ -13,10 +13,10 @@
         </mat-form-field>
         <div class="card-actions">
             <button mat-fab color="primary" (click)="abrirVentana()">
-                <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
+                <mat-icon>add</mat-icon>
             </button>
             <button mat-fab color="warn" (click)="eliminarPlaces($event)">
-                <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
+                <mat-icon>delete</mat-icon>
             </button>
         </div>
         <span class="spacer-right"></span>
