--- a/localizator/src/app/admin/device/device.component.html
+++ b/localizator/src/app/admin/device/device.component.html
@@ -47,9 +47,14 @@
                 <td mat-cell *matCellDef="let element"> {{element.name}}</td>
             </ng-container>
 
+            <ng-container matColumnDef="phone">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> {{'device.phone'|translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.phone}}</td>
+            </ng-container>
+
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="ajustado"> {{'device.status'|translate}}</th>
-                <td mat-cell *matCellDef="let element"> {{element.status}}</td>
+                <td mat-cell *matCellDef="let element"> {{element.status|translate}}</td>
             </ng-container>
 
             <ng-container matColumnDef="canceled">
