--- a/localizator/src/app/comun/travel/travel.component.html
+++ b/localizator/src/app/comun/travel/travel.component.html
@@ -49,12 +49,12 @@
 
             <ng-container matColumnDef="travelDate">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Viaje</th>
-                <td mat-cell *matCellDef="let element">{{element.travelDate|date:'shortDate'}} {{element.travelTime|date:'shortTime'}}</td>
+                <td mat-cell *matCellDef="let element">{{element.travelDate|date:'dd/MM/yyyy'}} {{element.travelTime|date:'shortTime'}}</td>
             </ng-container>
 
             <ng-container matColumnDef="arriveDate">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de Arrivo</th>
-                <td mat-cell *matCellDef="let element">{{element.arriveDate|date:'shortDate'}} {{element.arriveTime|date:'shortTime'}}</td>
+                <td mat-cell *matCellDef="let element">{{element.arriveDate|date:'dd/MM/yyyy'}} {{element.arriveTime|date:'shortTime'}}</td>
             </ng-container>
 
             <ng-container matColumnDef="bus">
@@ -100,9 +100,9 @@
                                     <div class="card-block" style="position:relative;top: -15px;">
                                         <table mat-table [dataSource]="createDatasSource(element.passengerTravels)" class="mat-elevation-z8">
                                             <!-- Position Column -->
-                                            <ng-container matColumnDef="place">
+                                            <ng-container matColumnDef="device">
                                                 <th mat-header-cell *matHeaderCellDef> Lugar</th>
-                                                <td mat-cell *matCellDef="let element"> {{element.place|place}}</td>
+                                                <td mat-cell *matCellDef="let element"> {{element.device|device}}</td>
                                             </ng-container>
 
                                             <!-- Name Column -->
