Add Devices to Traccar

--- a/localizator/src/app/admin/device/device.component.html
+++ b/localizator/src/app/admin/device/device.component.html
@@ -12,10 +12,10 @@
             <mat-icon matPrefix style="position: relative;top: 8px;font-size: 25px">search</mat-icon>
         </mat-form-field>
         <div class="card-actions">
-            <button mat-fab color="primary" (click)="abrirVentana()">
+            <button mat-fab color="primary" (click)="abrirVentana()" class="route-animations-elements">
                 <mat-icon aria-label="Example icon-button with a heart icon">add</mat-icon>
             </button>
-            <button mat-fab color="warn" (click)="eliminarDevices($event)">
+            <button mat-fab color="warn" (click)="eliminarDevices($event)" class="route-animations-elements">
                 <mat-icon aria-label="Example icon-button with a heart icon">delete</mat-icon>
             </button>
         </div>
