--- a/localizator/src/app/comun/bus/bus.component.html
+++ b/localizator/src/app/comun/bus/bus.component.html
@@ -54,6 +54,11 @@
                 <td mat-cell *matCellDef="let element"> {{element.siteNumber}}</td>
             </ng-container>
 
+            <ng-container matColumnDef="device">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="device.name" class="ajustado"> {{'bus.device'|translate}}</th>
+                <td mat-cell *matCellDef="let element"> {{element.device|device}}</td>
+            </ng-container>
+
             <ng-container matColumnDef="company">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header="company.name" class="ajustado"> {{'bus.company'|translate}}</th>
                 <td mat-cell *matCellDef="let element"> {{element.company|company}}</td>
