--- a/localizator/src/app/comun/tab-map/tab-map.component.html
+++ b/localizator/src/app/comun/tab-map/tab-map.component.html
@@ -6,7 +6,7 @@
     </mat-card-header>
     <mat-card-content>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="card mat-elevation-z10">
                     <div class="card-block with-icon">
                         <i>
@@ -17,10 +17,10 @@
                     </div>
                     <div class="card-block" style="padding-top: 0;">
                         <perfect-scrollbar style="max-height: 490px;">
-                            <mat-list *ngFor="let passenger of passengersTravel">
+                            <mat-list *ngFor="let passenger of passengersTravel; index as i">
                                 <mat-list-item class="row" style="border-bottom: 1px solid #bfb7b8">
                                     <div class="col-md-10" style="position: relative;top: -3px;">
-                                        {{passenger.passenger|passenger}}
+                                       {{i+1}} {{passenger.passenger|passenger}}
                                     </div>
                                     <div class="col-md-2">
                                         <button mat-mini-fab color="primary" (click)="showInMap(passenger)" style="position: relative;top: -5px;"
@@ -34,7 +34,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <div style="width:100%;height:600px;" #mapa id="mapa"></div>
             </div>
         </div>
