--- a/localizator/src/app/comun/travel/travel.component.html
+++ b/localizator/src/app/comun/travel/travel.component.html
@@ -123,6 +123,12 @@
                                                 <td mat-cell *matCellDef="let element"> {{element.passenger.dni}}</td>
                                             </ng-container>
 
+                                            <!-- Symbol Column -->
+                                            <ng-container matColumnDef="place">
+                                                <th mat-header-cell *matHeaderCellDef> Dni</th>
+                                                <td mat-cell *matCellDef="let element"> {{element.place|place}}</td>
+                                            </ng-container>
+
                                             <ng-container matColumnDef="acciones" stickyEnd>
                                                 <th mat-header-cell *matHeaderCellDef style="text-align: center;">Acciones</th>
                                                 <td mat-cell *matCellDef="let passengerTravel" align="center" class="acciones table-actions-theme">
