--- a/localizator/src/app/comun/travel/travel.component.html
+++ b/localizator/src/app/comun/travel/travel.component.html
@@ -99,7 +99,7 @@
                                     </div>
                                     <div class="card-block" style="position:relative;top: -15px;">
                                         <table mat-table [dataSource]="createDatasSource(element.passengerTravels)" class="mat-elevation-z8">
-                                            <!-- Position Column -->
+                                            <!-- Posicion Column -->
                                             <ng-container matColumnDef="device">
                                                 <th mat-header-cell *matHeaderCellDef> Lugar</th>
                                                 <td mat-cell *matCellDef="let element"> {{element.device|device}}</td>
