--- a/localizator/src/app/admin/device/device-window/device-window.component.html
+++ b/localizator/src/app/admin/device/device-window/device-window.component.html
@@ -1,5 +1,5 @@
 <form class="form" [formGroup]="form" (submit)="insertarDevice()">
-    <h1 mat-dialog-title style="margin: 0 0">{{insertar?'Nuevo Dispositivo':'Modificar Dispositivo'}}
+    <h1 mat-dialog-title style="margin: 0 0" draggable-dialog>{{insertar?'Nuevo Dispositivo':'Modificar Dispositivo'}}
         <button type="button" mat-icon-button class="close-button" (click)="onNoClick()">
             <mat-icon style="font-size: 25px">close</mat-icon>
         </button>
