--- a/localizator/src/app/comun/route/route-window/route-window.component.html
+++ b/localizator/src/app/comun/route/route-window/route-window.component.html
@@ -1,5 +1,5 @@
 <form class="form" [formGroup]="form" (submit)="insertarRoute()">
-    <h1 mat-dialog-title style="margin: 0 0">{{insertar?'Nueva Ruta':'Modificar Ruta'}}
+    <h1 mat-dialog-title style="margin: 0 0" draggable-dialog>{{insertar?'Nueva Ruta':'Modificar Ruta'}}
         <button type="button" mat-icon-button class="close-button" (click)="onNoClick()">
             <mat-icon style="font-size: 25px">close</mat-icon>
         </button>
