--- a/src/main/resources/static/assets/css/layouts/default-sidebar-2.css
+++ b/src/main/resources/static/assets/css/layouts/default-sidebar-2.css
@@ -107,6 +107,7 @@ html [data-layout="default-sidebar-1"][data-navbar="white"] {
     box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0.2), 0px 7px 10px 1px rgba(0, 0, 0, 0.14), 0px 2px 16px 1px rgba(0, 0, 0, 0.12);
     padding: 40px;
     transform: translate3d(0, -60px, 0);
+    z-index: 1033;
 }
 
 [data-layout="default-sidebar-2"] .left-sidebar-1 {
